force-app/main/default/objects/BL_Team__c/fields/IsSinglePlayer__c.field-meta.xml
<CustomField>
    <fullName>IsSinglePlayer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Single Player</label>
    <type>Checkbox</type>
</CustomField>