force-app/main/default/objects/BL_Team__c/fields/Logo_Id__c.field-meta.xml
<CustomField>
    <fullName>Logo_Id__c</fullName>
    <description>Google Drive Id of team&apos;s logo image</description>
    <label>Logo Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>