force-app/main/default/objects/BL_Team__c/fields/Player1__c.field-meta.xml
<CustomField>
    <fullName>Player1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams1</relationshipName>
    <type>Lookup</type>
</CustomField>