force-app/main/default/objects/BL_Team__c/fields/Player2__c.field-meta.xml
<CustomField>
    <fullName>Player2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams (Player2)</relationshipLabel>
    <relationshipName>Teams2</relationshipName>
    <type>Lookup</type>
</CustomField>