force-app/main/default/objects/BL_Team__c/fields/Team_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Count__c</fullName>
    <label>Team Member Count</label>
    <summaryForeignKey>BL_TeamMember__c.Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>