force-app/main/default/objects/BL_Team__c/fields/Total_Games_Drawn__c.field-meta.xml
<CustomField>
    <fullName>Total_Games_Drawn__c</fullName>
    <label>Total Games Drawn</label>
    <summarizedField>BL_Competitor__c.GamesDrawn__c</summarizedField>
    <summaryForeignKey>BL_Competitor__c.Team__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>