force-app/main/default/objects/BL_Team__c/fields/Total_Goals_Scored__c.field-meta.xml
<CustomField>
    <fullName>Total_Goals_Scored__c</fullName>
    <label>Total Goals Scored</label>
    <summarizedField>BL_Competitor__c.GoalsFor__c</summarizedField>
    <summaryForeignKey>BL_Competitor__c.Team__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>