force-app/main/default/objects/BL_Team__c/fields/TotalRoundsLost__c.field-meta.xml
<CustomField>
    <fullName>TotalRoundsLost__c</fullName>
    <label>TotalRoundsLost</label>
    <summarizedField>BL_Competitor__c.RoundsLost__c</summarizedField>
    <summaryForeignKey>BL_Competitor__c.Team__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>