force-app/main/default/objects/BL_Team__c/fields/TotalRoundsWon__c.field-meta.xml
<CustomField>
    <fullName>TotalRoundsWon__c</fullName>
    <label>TotalRoundsWon</label>
    <summarizedField>BL_Competitor__c.RoundsWon__c</summarizedField>
    <summaryForeignKey>BL_Competitor__c.Team__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>