force-app/main/default/objects/BL_Team__c/recordTypes/Battle_Royale.recordType-meta.xml
<RecordType>
    <fullName>Battle_Royale</fullName>
    <active>true</active>
    <label>Battle Royale</label>
</RecordType>