force-app/main/default/objects/BL_Team__c/recordTypes/Classic.recordType-meta.xml
<RecordType>
    <fullName>Classic</fullName>
    <active>true</active>
    <label>Classic</label>
</RecordType>